components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "linuxserver/readarr:develop"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: import
              mountPath: /import
            - name: books
              mountPath: /books
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: import
          hostPath:
            # this is a holdover from a not-so-well-planned media storage
            # solution, but we'll use this because it's what the download
            # clients use
            path: /mnt/downloads/import
            type: Directory
        - name: books
          hostPath:
            path: /mnt/books/general
            type: Directory
